--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background: #e3e3e3;">
   <!-- Hoory -->
-  <script>!function(h,oo,r,y){h[r]=h[r]||{},h[r].workspace=y;const f=oo.getElementsByTagName('script')[0],j=oo.createElement('script');j.async=!0,j.src='https://api-dev.hb-web.hoory.cloud/embed.js?w='+y,f.parentNode.insertBefore(j, f),j.onload=function(){h[r].open()}}(window,document,'hoory','opppp2');</script>
+  <script>!function(h,oo,r,y){h[r]=h[r]||{},h[r].workspace=y;const f=oo.getElementsByTagName('script')[0],j=oo.createElement('script');j.async=!0,j.src='https://api-dev.hb-web.hoory.cloud/embed.js?w='+y,f.parentNode.insertBefore(j, f),j.onload=function(){h[r].init()}}(window,document,'hoory','opppp2');</script>
   <!-- Hoory -->
 </body>
 </html>
