--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body style="background: #e3e3e3;">
   <!-- Hoory -->
   <script>
-      window.hoory={initializeHidden:!0,forceChatInit:!0
+      window.hoory={initializeHidden:!0,forceChatInit:!0,
                 
        firstName: "SERGEY", // Replace this with your user's first name
         lastName: "CHILINGARYAN", // Replace this with your user's last name
